--- a/views/index.hbs
+++ b/views/index.hbs
@@ -53,8 +53,7 @@
                     </h1>
                     <h2>Find IFSC codes in 3 easy steps</h2>
 
-                    <div class="ui ordered steps">
-                        
+                    <div class="ui ordered steps" id="steps-div">
                         {{#each stepStatus }}
                             <div class="{{this.status}} step">
                             <div class="content">
@@ -95,17 +94,17 @@
                 <div class="ui middle aligned stackable grid container">
 
                     <div class="row">
-                <div class="ui middle aligned stackable grid container">
-                        <div class="center aligned column">
-                            <h1>Searching</h1>
-                    </div>
-                    </div>
+                        <div class="ui middle aligned stackable grid container">
+                            <div class="center aligned column">
+                                <h1>{{statiticTitle}}</h1>
+                            </div>
+                        </div>
                     </div>
 
 
-                    <div class="row">
+                    <div class="row" id="statistics-row">
                         <div class="center aligned column">
-                            <div class="ui four statistics">
+                            <div class="ui {{ statisticCount }} statistics">
                                 {{#each statistic}}
                                 <div class="statistic">
                                     <div class="value">
@@ -120,6 +119,24 @@
                         </div>
                     </div>
 
+                    <div class="ui modal">
+                        <i class="close icon"></i>
+                        <div class="header">
+                            Modal Title
+                        </div>
+                        <div class="image content">
+                            <div class="image">
+                                An image can appear on left or an icon
+                            </div>
+                            <div class="description">
+                                A description can appear on the right
+                            </div>
+                        </div>
+                        <div class="actions">
+                            <div class="ui button">Cancel</div>
+                            <div class="ui button">OK</div>
+                        </div>
+                    </div>
 
                     <h4 class="ui horizontal header divider">
                         <a href="#">Case Studies</a>
@@ -345,46 +362,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        
-                    <h4 class="ui horizontal header divider">
-                        <a href="#">Case Studies</a>
-                    </h4>
-                        <div class="eight wide column">
-                            <h3 class="ui header">We Help Companies and Companions</h3>
-                            <p>We can give your company superpowers to do things that they never thought possible. Let us delight your customers and empower your needs...through pure data analytics.</p>
-                            <h3 class="ui header">We Make Bananas That Can Dance</h3>
-                            <p>Yes that's right, you thought it was the stuff of dreams, but even bananas can be bioengineered.</p>
-                        </div>
-                        <div class="six wide right floated column">
-                            <img src="/images/cute-cat.jpg" class="ui large bordered rounded image">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="center aligned column">
-                            <a class="ui huge button">Check Them Out</a>
-                        </div>
-                    </div>
                 </div>
             </div>
 
-
-            <div class="ui vertical stripe quote segment">
-                <div class="ui equal width stackable internally celled grid">
-                    <div class="center aligned row">
-                        <div class="column">
-                            <h3>"What a Company"</h3>
-                            <p>That is what they all say about us</p>
-                        </div>
-                        <div class="column">
-                            <h3>"I shouldn't have gone with their competitor."</h3>
-                            <p>
-                            <img src="/images/avatar/nan.jpg" class="ui avatar image"> <b>Nan</b> Chief Fun Officer Acme Toys
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
             <div class="ui vertical stripe segment">
                 <div class="ui text container">
