Fixing more layout issues

--- a/templates/modal.hbs
+++ b/templates/modal.hbs
@@ -8,10 +8,12 @@
         <div class="center aligned column">
             <div class="ui raised card">
                 <div class="content">
-                    <div class="header">{{ifscCode}}</div>
+                    <p style="color:gray">IFSC</p>
+                    <div class="header" style="color:blue">{{ifscCode}}</div>
                 </div>
                 <div class="content">
                     <h4 class="ui sub header">{{branchName}}</h4>
+                    <br> 
                     {{address}}
                 </div>
             </div>
