--- a/templates/steps.hbs
+++ b/templates/steps.hbs
@@ -1,4 +1,4 @@
-<div class="ui ordered steps">
+<div class="ui three ordered steps">
     {{#each stepStatus }}
         <div class="{{this.status}} step">
             <div class="content">
