--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -41,6 +41,10 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/api.min.js">
         </script>
         
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/button.min.js">
+        </script>
+        
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/reset.min.css">
 
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/reset.min.css">
