--- a/templates/modal.hbs
+++ b/templates/modal.hbs
@@ -1,5 +1,4 @@
 <div class="ui small modal" id="modal-finalResult">
-    <i class="close red icon"></i>
     <div class="header" align="center">
         {{bankName}}
     </div>
@@ -9,7 +8,7 @@
             <div class="ui raised card">
                 <div class="content">
                     <p style="color:gray">IFSC</p>
-                    <div class="header" style="color:blue">{{ifscCode}}</div>
+                    <div class="header" style="color:blue" id="ifsc-code">{{ifscCode}}</div>
                 </div>
                 <div class="content">
                     <h4 class="ui sub header">{{branchName}}</h4>
@@ -24,7 +23,7 @@
         <div class="center aligned column">
             <div class="actions">
                 <div class="extra content" align="center">
-                    <button class="ui center aligned white button">copy IFSC</button>
+                    <button class="ui center aligned wide blue button" id="button-copy-ifsc" data-clipboard-target="#ifsc-code">Copy IFSC</button>
                 </div>
             </div>
 
