--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,31 +1,16 @@
         <!-- Following Menu -->
         <div class="ui large top fixed hidden menu">
             <div class="ui container">
-                <a class="active item">Home</a>
-                <a class="item">Work</a>
-                <a class="item">Company</a>
-                <a class="item">Careers</a>
-                <div class="right menu">
-                    <div class="item">
-                        <a class="ui button">Log in</a>
-                    </div>
-                    <div class="item">
-                        <a class="ui primary button">Sign Up</a>
-                    </div>
-                </div>
+                <a href="#" class="active item" id="home-button">Home</a>
+                <a class="item">About</a>
             </div>
         </div>
 
         <!-- Sidebar Menu -->
         <div class="ui vertical inverted sidebar menu">
-            <a class="active item">Home</a>
-            <a class="item">Work</a>
-            <a class="item">Company</a>
-            <a class="item">Careers</a>
-            <a class="item">Login</a>
-            <a class="item">Signup</a>
+            <a href="#" class="active item" id="home-button">Home</a>
+            <a class="item">About</a>
         </div>
-
 
         <!-- Page Contents -->
         <div class="pusher">
@@ -36,14 +21,8 @@
                         <a class="toc item">
                             <i class="sidebar icon"></i>
                         </a>
-                        <a class="active item">Home</a>
-                        <a class="item">Work</a>
-                        <a class="item">Company</a>
-                        <a class="item">Careers</a>
-                        <div class="right item">
-                            <a class="ui inverted button">Log in</a>
-                            <a class="ui inverted button">Sign Up</a>
-                        </div>
+                        <a href="#" class="active item" id="home-button">Home</a>
+                        <a class="item">About</a>
                     </div>
                 </div>
 
@@ -82,7 +61,7 @@
                         </div>
                     </div>
                     <br>
-                    <a class="ui center aligned mini negative button" id="reset-button">Reset</a>
+                    <a href="/" class="ui center aligned mini negative button" id="reset-button">Reset</a>
                 </div>
             </div>
 
@@ -91,7 +70,7 @@
             <!--   Statistics title   -->
             <!-- ==================== -->
             
-            <div class="ui vertical stripe segment">
+            <div class="ui vertical stripe segment" id="statistics-segment">
                 <div class="ui middle aligned stackable grid container">
 
                     <div class="row">
@@ -424,18 +403,13 @@
 
             <div class="ui vertical stripe segment">
                 <div class="ui text container">
-                    <h3 class="ui header">Breaking The Grid, Grabs Your Attention</h3>
-                    <p>Instead of focusing on content creation and hard work, we have learned how to master the art of doing nothing by providing massive amounts of whitespace and generic content that can seem massive, monolithic and worth your attention.</p>
-                    <a class="ui large button">Read More</a>
-                    <h4 class="ui horizontal header divider">
-                        <a href="#">Case Studies</a>
-                    </h4>
-                    <h3 class="ui header">Did We Tell You About Our Bananas?</h3>
-                    <p>Yes I know you probably disregarded the earlier boasts as non-sequitur filler content, but its really true. It took years of gene splicing and combinatory DNA research, but our bananas can really dance.</p>
-                    <a class="ui large button">I'm Still Quite Interested</a>
+                    <h3 class="ui header">What is IFSC?</h3>
+                    <p>The Indian Financial System Code (IFS Code or IFSC) is an alphanumeric code that facilitates electronic funds transfer in India.</p> 
+                    
+                    <p>IFSC uniquely identifies each bank branch participating in the two main Payment and settlement systems in India: the Real Time Gross Settlement (RTGS) and the National Electronic Fund Transfer (NEFT) systems.
+</p>
                 </div>
             </div>
-
 
             <div class="ui inverted vertical footer segment">
                 <div class="ui container">
