--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,6 +13,11 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         -->
         <script src="https://code.jquery.com/jquery-1.8.0.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
+
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/api.min.js">
+        </script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.0/mustache.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/visibility.js"></script>
@@ -21,6 +26,11 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/transition.js"></script>
 
         <script type="text/javascript" src="javascripts/script.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/14.2.1/smooth-scroll.min.js"></script>
+        <script>
+        	var scroll = new SmoothScroll('a[href*="#"]');
+        </script>
+        
         <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 
         <script
@@ -39,10 +49,6 @@
 
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/api.min.js">
-        </script>
-        
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/button.min.js">
         </script>
         
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/reset.min.css">
