More good stuff.. checking in .. this dint break it.

--- a/templates/dropdown.hbs
+++ b/templates/dropdown.hbs
@@ -1,10 +1,10 @@
-                    <div class="ui massive fluid search icon selection dropdown" id={{processStep}}>
-                        <input type="hidden" name="country">
-                        <i class="dropdown icon"></i>
-                        <div class="default text">Enter Bank Name</div>
-                        <div class="menu">
-                            {{#each allBankNames}}
-                                <div class="item" data-value={{this}} class="bankName"></i>{{this}}</div>
-                            {{/each}}
-                        </div>
-                    </div>
+<div class="ui massive fluid search icon selection dropdown" id="{{processStep}}">
+    <input type="hidden" name="country">
+    <i class="dropdown icon"></i>
+    <input class="search" autocomplete="off" tabindex="0"><div class="default text">Enter Bank Name</div>
+    <div class="menu" tabindex="-1">
+        {{#each allBankNames}}
+            <div class="item" data-value="" class="bankName"></i>{{this}}</div>
+        {{/each}}
+    </div>
+</div>
