--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127410136-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-127410136-1');
+        </script>
+
+
         <!-- Standard Meta -->
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -26,10 +38,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/transition.js"></script>
 
         <script type="text/javascript" src="javascripts/script.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/14.2.1/smooth-scroll.min.js"></script>
-        <script>
-        	var scroll = new SmoothScroll('a[href*="#"]');
-        </script>
         
         <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 
@@ -77,6 +85,41 @@
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/ad.min.css">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/ad.min.css">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/modal.min.css">
+
+
+        <script>
+
+            $('#findCity-dropdown.ui.dropdown')
+                .dropdown(
+                    {
+                        //action: 'hide',
+                        onChange: function(value, text, $selectedItem) {
+                            // custom action
+
+                            var xmlhttp = new XMLHttpRequest();
+                            xmlhttp.onreadystatechange = function() {
+                                if (this.readyState == 4 && this.status == 200) {
+                                    var myObj = JSON.parse(this.responseText);
+
+                                    //Generate Statistics talkg
+                                    document.getElementById('steps-div').innerHTML = myObj.div_steps
+                                    document.getElementById('statistics-row').innerHTML = myObj.div_stats
+                                }
+                            };
+
+                            let fullPath = window.location.search.substring(1); 
+                            let finalPath = "/cities/?" + fullPath + '&cityName=' + text
+                            console.log("WE will now query path... " + finalPath);
+
+                            xmlhttp.open("GET", finalPath, true);
+                            xmlhttp.send();
+
+                        }
+                    })
+
+        </script>
+
+
     </head>
   <body>
     {{{body}}}
