--- a/templates/dropdown.hbs
+++ b/templates/dropdown.hbs
@@ -1,10 +1,5 @@
-<div class="ui massive fluid search icon selection dropdown" id="{{processStep}}">
-    <input type="hidden" name="country">
-    <i class="dropdown icon"></i>
-    <input class="search" autocomplete="off" tabindex="0"><div class="default text">Enter Bank Name</div>
-    <div class="menu" tabindex="-1">
+    <div class="menu" tabindex="-1" id="menuboy">
         {{#each allBankNames}}
-            <div class="item" data-value="" class="bankName"></i>{{this}}</div>
+            <div class="item" data-value="city" class="cityName">{{this}}</div>
         {{/each}}
     </div>
-</div>
