--- a/views/index.hbs
+++ b/views/index.hbs
@@ -37,7 +37,7 @@
                     <!-- ==================== -->
                     <div class="ui ordered three steps" id="steps-div">
                         {{#each stepStatus }}
-                            <div class="{{this.status}} step">
+                        <div class="{{this.status}} step">
                             <div class="content">
                                 <div class="title">{{this.title}}</div>
                                 <div class="description">{{this.description}}</div>
@@ -46,17 +46,16 @@
                         {{/each}}
                     </div>
 
-
                     <!-- ==================== -->
                     <!--      Drop Down Div   -->
                     <!-- ==================== -->
-                    <div class="ui massive fluid search icon selection dropdown" id={{processStep}}>
+                    <div class="ui massive fluid search icon selection dropdown" id=findBank>
                         <input type="hidden" name="country">
                         <i class="dropdown icon"></i>
                         <div class="default text">{{dropDownPlaceHolderText}}</div>
-                        <div class="menu">
+                        <div class="menu" id="menuboy">
                             {{#each allBankNames}}
-                                <div class="item" data-value={{this}} class="bankName"></i>{{this}}</div>
+                                <div class="item" data-value={{this}} class="bankName">{{this}}</div>
                             {{/each}}
                         </div>
                     </div>
@@ -65,6 +64,64 @@
                 </div>
             </div>
 
+            <!-- ==================== -->
+            <!-- Final Results Modal -->
+            <!-- ==================== -->
+
+            <div class="ui small modal" id="modal-finalResult">
+                <i class="close red icon"></i>
+                <div class="header" align="center">
+                    ICICI Bank Limited 
+                </div>
+                <br>
+                <div class="row" align="center">
+                    <div class="center aligned column">
+                        <div class="ui raised card">
+                            <div class="content">
+                                <div class="header">Project Timeline</div>
+                            </div>
+                            <div class="content">
+                                <h4 class="ui sub header">Activity</h4>
+                                <div class="ui small feed">
+                                    <div class="event">
+                                        <div class="content">
+                                            <div class="summary">
+                                                <a>Elliot Fu</a> added <a>Jenny Hess</a> to the project
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="event">
+                                        <div class="content">
+                                            <div class="summary">
+                                                <a>Stevie Feliciano</a> was added as an <a>Administrator</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="event">
+                                        <div class="content">
+                                            <div class="summary">
+                                                <a>Helen Troy</a> added two pictures
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="row"> 
+                    <div class="center aligned column">
+                        <div class="actions">
+                            <div class="extra content" align="center">
+                                <button class="ui center aligned blue button">Copy IFSC</button>
+                            </div>
+                        </div>
+                        <br>
+                        <br>
+                    </div>
+                </div>
+            </div>
 
             <!-- ==================== -->
             <!--   Statistics title   -->
@@ -72,7 +129,6 @@
             
             <div class="ui vertical stripe segment" id="statistics-segment">
                 <div class="ui middle aligned stackable grid container">
-
                     <div class="row">
                         <div class="ui middle aligned stackable grid container">
                             <div class="center aligned column">
@@ -102,76 +158,9 @@
                             </div>
                         </div>
                     </div>
-
-
-
-
-                    <!-- ==================== -->
-                    <!-- Final Results Modal -->
-                    <!-- ==================== -->
-                    
-                    <div class="ui small modal" id="modal-finalResult">
-                        <i class="close red icon"></i>
-                        <div class="header" align="center">
-                            ICICI Bank Limited 
-                        </div>
-                        <br>
-                        <div class="row" align="center">
-                            <div class="center aligned column">
-                                <div class="ui raised card">
-                                    <div class="content">
-                                        <div class="header">Project Timeline</div>
-                                    </div>
-                                    <div class="content">
-                                        <h4 class="ui sub header">Activity</h4>
-                                        <div class="ui small feed">
-                                            <div class="event">
-                                                <div class="content">
-                                                    <div class="summary">
-                                                        <a>Elliot Fu</a> added <a>Jenny Hess</a> to the project
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="event">
-                                                <div class="content">
-                                                    <div class="summary">
-                                                        <a>Stevie Feliciano</a> was added as an <a>Administrator</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="event">
-                                                <div class="content">
-                                                    <div class="summary">
-                                                        <a>Helen Troy</a> added two pictures
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <br>
-                        <div class="row"> 
-                            <div class="center aligned column">
-                                <div class="actions">
-                                    <div class="extra content" align="center">
-                                        <button class="ui center aligned blue button">Copy IFSC</button>
-                                    </div>
-                                </div>
-
-                                <br>
-                                <br>
-                            </div>
-                        </div>
+                    </div>
                     </div>
 
-                    
-                    
-                    
-                    
-                    
-                    
                     
                     <h4 class="ui horizontal header divider">
                         <a href="#">Case Studies</a>
