--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,6 +2,12 @@
 <html>
     <head>
 
+
+        <!-- Standard Meta -->
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127410136-1"></script>
         <script>
@@ -13,18 +19,14 @@
         </script>
 
 
-        <!-- Standard Meta -->
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+        <script src="https://code.jquery.com/jquery-1.8.0.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css" />
 
         <!-- Site Properties -->
-        <title>IFSC Finder</title>
-<!-- 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        -->
-        <script src="https://code.jquery.com/jquery-1.8.0.min.js"></script>
+        <title>Find IFSC</title>
+
         <script src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
 
         <script
@@ -34,31 +36,23 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.0/mustache.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/visibility.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/sidebar.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/dropdown.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/transition.js"></script>
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/dropdown.js"></script>
         <script type="text/javascript" src="javascripts/script.js"></script>
-        
+
         <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/dropdown.min.js">
-        </script>
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/modal.min.js">
         </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/dimmer.min.js"></script>
-        
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/dimmer.css" />
 
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/dropdown.min.js">
-        </script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/dimmer.css" />
 
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/api.min.js">
         </script>
-        
+
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/reset.min.css">
 
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/reset.min.css">
@@ -86,42 +80,14 @@
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/ad.min.css">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/modal.min.css">
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/transition.min.js"></script>
 
-        <script>
-
-            $('#findCity-dropdown.ui.dropdown')
-                .dropdown(
-                    {
-                        //action: 'hide',
-                        onChange: function(value, text, $selectedItem) {
-                            // custom action
-
-                            var xmlhttp = new XMLHttpRequest();
-                            xmlhttp.onreadystatechange = function() {
-                                if (this.readyState == 4 && this.status == 200) {
-                                    var myObj = JSON.parse(this.responseText);
-
-                                    //Generate Statistics talkg
-                                    document.getElementById('steps-div').innerHTML = myObj.div_steps
-                                    document.getElementById('statistics-row').innerHTML = myObj.div_stats
-                                }
-                            };
-
-                            let fullPath = window.location.search.substring(1); 
-                            let finalPath = "/cities/?" + fullPath + '&cityName=' + text
-                            console.log("WE will now query path... " + finalPath);
-
-                            xmlhttp.open("GET", finalPath, true);
-                            xmlhttp.send();
-
-                        }
-                    })
-
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css">
         </script>
 
-
     </head>
-  <body>
-    {{{body}}}
-  </body>
+    <body>
+        {{{body}}}
+    </body>
 </html>
