More UX Clean up

--- a/templates/modal.hbs
+++ b/templates/modal.hbs
@@ -1,4 +1,5 @@
 <div class="ui small modal" id="modal-finalResult">
+  <i class="close icon"></i>
     <div class="header" align="center">
         {{bankName}}
     </div>
