Getting rid of all the horizontal lines the segments were adding. Made all the segments "basic".

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,7 @@
 <div class="pusher">
 
     <!-- Black segment at the top of the page...... -->
-    <div class="ui inverted vertical masthead center aligned segment" style="background-image: url('/images/bg.jpg'); background-size: cover; background-position: center center;">
+    <div class="ui inverted vertical masthead center aligned basic segment" style="background-image: url('/images/bg.jpg'); background-size: cover; background-position: center center;">
         <div class="ui container">
             <div class="ui large secondary inverted pointing menu">
                 <a class="toc item">
@@ -124,7 +124,7 @@
         </div>
     </div>
 
-    <div class="ui segment">
+    <div class="ui basic segment">
         <div class="ui massive left dividing rail">
             <div class="ui segment">
                 <div class="ui wide skyscraper test ad" data-text="Wide Skyscraper"></div>
@@ -139,7 +139,7 @@
         <!--   Statistics title   -->
         <!-- ==================== -->
         <div class="ui container">
-        <div class="ui vertical segment" id="statistics-segment">
+        <div class="ui vertical basic segment" id="statistics-segment">
             <div class="ui middle aligned stackable grid container">
                 
                 <div class="row" style="display:inline-block"><br></div>
@@ -178,7 +178,7 @@
 
 
 
-        <div class="ui vertical white stripe segment">
+        <div class="ui vertical basic stripe segment">
             <h4 class="ui horizontal header divider">
                 <a href="#">Popular Banks</a>
             </h4>
@@ -405,13 +405,13 @@
             </div>
         </div>
 
-        <div class="ui vertical stripe white segment">
+        <div class="ui vertical stripe basic segment">
             <div class="row" style="display:inline-block"><br></div>
             <div class="ui text container">
                 <h3 class="ui middle aligned header" align="center">What is IFSC?</h3>
                 <p>The Indian Financial System Code (IFS Code or IFSC) is an alphanumeric code that facilitates electronic funds transfer in India.</p> 
 
-                <p>IFSC uniquely identifies each bank branch participating in the two main Payment and settlement systems in India: the Real Time Gross Settlement (RTGS) and the National Electronic Fund Transfer (NEFT) systems.
+                <p>IFSC uniquely identifies each bank branch participating in the two main Payment and settlement systems in India: <i>Real Time Gross Settlement (RTGS)</i> and <i>National Electronic Fund Transfer (NEFT).</i>
                 </p>
             </div>
         </div>
