Find bank search bar working

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,7 +19,7 @@
         </script>
 
         <script src="https://code.jquery.com/jquery-1.8.0.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css" />
 
         <!-- Site Properties -->
