--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,7 @@
 <div class="pusher">
 
     <!-- Black segment at the top of the page...... -->
-    <div class="ui inverted vertical masthead center aligned basic segment" style="background-image: url('/images/bg.jpg'); background-size: cover; background-position: center center;">
+    <div class="ui inverted vertical masthead center aligned basic segment" style="background-image: url('/images/bg1.jpg'); background-size: cover; background-position: center center;">
 
         <div class="ui container">
             <div class="ui large secondary inverted pointing menu">
@@ -74,124 +74,107 @@
         </div>
     </div>
 
-<div class="ui mobile hidden vertical raised adStripe segment">
-    <div class="ui centered large rectangle test ad" data-text="Large Rectangle"></div>
+    </div>
+
+    <div class="ui mobile hidden inverted vertical adStripe segment">
+        <div class="ui centered large rectangle test ad" data-text="Large Rectangle"></div>
+    </div>
+
+<div class="ui raised segments" id="findLocationSegment">
+    <div class="ui vertical stripeShort segment">
+        <div class="ui grid container">
+            <div class="row">
+                <div class="one wide left column"></div>
+                <div class="fourteen wide center aligned column">
+                    <div class="ui stripe segment">
+                        <h1>ICICI Bank Limited </h1>
+                        <h1></h1>
+                        <p>Search For you bank Location</p>
+                    </div>
+                    <div class="ui huge fluid search" id="findLocationSearchField">
+                        <div class="ui icon input">
+                            <input class="prompt" type="text" placeholder="Enter Bank Location ">
+                            <i class="search icon"></i>
+                        </div>
+                        <div class="results"></div>
+                    </div>
+                </div>
+                <div class="one wide right column"></div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- Find Branch Segement -->
+
+    <div class="ui white vertical stripe segment" id="findBranchSegment">
+        <div class="ui grid container">
+            <div class="row">
+                <div class="one wide left column"></div>
+                <div class="fourteen wide center aligned column">
+                    <div class="ui stripe segment">
+                        <h1>ICICI Bank Limited </h1>
+                        <h2>Bangalore</h2>
+                        <p>Search For you bank branch</p>
+                    </div>
+                    <div class="ui huge fluid search" id="findBranchSearchField">
+                        <div class="ui icon input">
+                            <input class="prompt" type="text" placeholder="Enter Bank Branch">
+                            <i class="search icon"></i>
+                        </div>
+                        <div class="results"></div>
+                    </div>
+                </div>
+                <div class="one wide right column"></div>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div class="ui mobile hidden adStripe"> 
+<div class="ui vertical raised adStripe segment">
+    <div class="ui mobile hidden centered large rectangle test ad" data-text="Large Rectangle"></div>
+</div>
 
-  </div>
+<div id="particles-js">
 
-
-<div class="ui green mobile hidden inverted vertical raised stripeShort segment">
+<div class="ui blue inverted vertical stripe segment">
     <div class="ui grid container">
         <div class="row">
             <div class="one wide left column"></div>
             <div class="fourteen wide center aligned column">
-                <div class="ui text container">
-                    <h1>ICICI Bank Limited </h1>
-                    <h2>Select your Bank Branch?</h2>
+                <div class="ui stripe segment">
+                    <h2>ICICI Bank Limited </h2>
+                    <p>Bangalore Branch</p>
+                    <h1>IFSC : ABC000090909</h1>
+                    <h4>Address</h4>
+                    <p>38/10 St Johns Road, Sivan Chetty Garden P.O.</p>
+                    <p>Bangalore - 560042</p>
                 </div>
-                <div class="ui huge fluid search" id="branchSearchField">
-                    <div class="ui icon input">
-                        <input class="prompt" type="text" placeholder="Enter Bank Location ">
-                        <i class="search icon"></i>
-                    </div>
-                    <div class="results"></div>
-                </div>
+                <div class="one wide right column"></div>
             </div>
-            <div class="one wide right column"></div>
         </div>
     </div>
 </div>
 </div>
 
-<div class="ui inverted vertical raised adStripe segment">
-    <div class="ui centered large rectangle test ad" data-text="Large Rectangle"></div>
-</div>
 
-<div class="ui raised segments">
-  <div class="ui white vertical stripeShort segment">
-    <div class="ui grid container">
-      <div class="row">
-        <div class="one wide left column"></div>
-        <div class="fourteen wide center aligned column">
-          <div class="ui stripe segment">
-            <h1>ICICI Bank Limited </h1>
-            <h1></h1>
-            <p>Search For you bank branch</p>
-          </div>
-          <div class="ui huge fluid search" id="locationSearchField">
-            <div class="ui icon input">
-              <input class="prompt" type="text" placeholder="Enter Bank Location ">
-              <i class="search icon"></i>
-            </div>
-            <div class="results"></div>
-          </div>
-        </div>
-        <div class="one wide right column"></div>
-      </div>
-    </div>
-  </div>
-  <div class="ui white vertical stripe segment">
-    <div class="ui grid container">
-      <div class="row">
-        <div class="one wide left column"></div>
-        <div class="fourteen wide center aligned column">
-          <div class="ui stripe segment">
-            <h1>ICICI Bank Limited </h1>
-            <h2>Bangalore</h2>
-            <p>Search For you bank branch</p>
-          </div>
-          <div class="ui huge fluid search" id="branchSearchField">
-            <div class="ui icon input">
-              <input class="prompt" type="text" placeholder="Enter Bank Location ">
-              <i class="search icon"></i>
-            </div>
-            <div class="results"></div>
-          </div>
-        </div>
-        <div class="one wide right column"></div>
-      </div>
-    </div>
-  </div>
-</div>
+        <div id="particles-js"></div>
 
-  <div class="ui inverted vertical raised adStripe segment">
-    <div class="ui mobile centered large rectangle test ad" data-text="Large Rectangle"></div>
-  </div>
 
-  <div class="ui blue inverted vertical stripe segment">
-    <div class="ui grid container">
-      <div class="row">
-        <div class="one wide left column"></div>
-        <div class="fourteen wide center aligned column">
-          <div class="ui stripe segment">
-            <h2>ICICI Bank Limited </h2>
-            <p>Bangalore Branch</p>
-            <h1>IFSC : ABC000090909</h1>
-            <h4>Address</h4>
-            <p>38/10 St Johns Road, Sivan Chetty Garden P.O.</p>
-            <p>Bangalore - 560042</p>
-          </div>
-          <div class="one wide right column"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="ui inverted vertical footer segment">
+<div class="ui inverted vertical footer segment">
     <div class="ui container">
-      <div class="ui stackable inverted divided equal height stackable grid">
-        <div class="seven wide column">
-          <h4 class="ui inverted header">Legal Disclaimer</h4>
-          <p>www.ifsc.today has made every attempt to ensure the accuracy of the information provided on this website. Bank Details and IFS code has been fetched from the Reserve Bank of India's website. This organization (www.ifsc.today) does not accept any responsibility or liability for the accuracy, content, completeness, legality, or reliability of the information contained on this website.</p>
-          
-          <p><b>Data last updated :</b> 23-October-2018</p>
+        <div class="ui stackable inverted divided equal height stackable grid">
+            <div class="seven wide column">
+                <h4 class="ui inverted header">Legal Disclaimer</h4>
+                <p>www.ifsc.today has made every attempt to ensure the accuracy of the information provided on this website. Bank Details and IFS code has been fetched from the Reserve Bank of India's website. This organization (www.ifsc.today) does not accept any responsibility or liability for the accuracy, content, completeness, legality, or reliability of the information contained on this website.</p>
+
+                <p><b>Data last updated :</b> 23-October-2018</p>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
+</div>
+
 
 
 </div>
