Navigate to Results segment after entering all fields

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -136,9 +136,7 @@
     <div class="ui mobile hidden centered large rectangle test ad" data-text="Large Rectangle"></div>
 </div>
 
-<div id="particles-js">
-
-<div class="ui blue inverted vertical stripe segment">
+<div class="ui blue inverted vertical stripe segment" id="showResultSegment">
     <div class="ui grid container">
         <div class="row">
             <div class="one wide left column"></div>
