Populate results in DOM after all details are entered by the user.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -74,91 +74,85 @@
         </div>
     </div>
 
-    </div>
-
-    <div class="ui mobile hidden inverted vertical adStripe segment">
+    <div class="ui mobile hidden vertical stripe  segment">
         <div class="ui centered large rectangle test ad" data-text="Large Rectangle"></div>
     </div>
 
-<div class="ui raised segments" id="findLocationSegment">
-    <div class="ui vertical stripeShort segment">
+    <div class="ui raised segments" id="findLocationSegment">
+        <div class="ui vertical stripeShort segment">
+            <div class="ui grid container">
+                <div class="row">
+                    <div class="one wide left column"></div>
+                    <div class="fourteen wide center aligned column">
+                        <div class="ui stripe segment">
+                            <h1>ICICI Bank Limited </h1>
+                            <h1></h1>
+                            <p>Search For you bank Location</p>
+                        </div>
+                        <div class="ui huge fluid search" id="findLocationSearchField">
+                            <div class="ui icon input">
+                                <input class="prompt" type="text" placeholder="Enter Bank Location ">
+                                <i class="search icon"></i>
+                            </div>
+                            <div class="results"></div>
+                        </div>
+                    </div>
+                    <div class="one wide right column"></div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <!-- Find Branch Segement -->
+
+        <div class="ui white vertical stripe segment" id="findBranchSegment">
+            <div class="ui grid container">
+                <div class="row">
+                    <div class="one wide left column"></div>
+                    <div class="fourteen wide center aligned column">
+                        <div class="ui stripe segment">
+                            <h1>ICICI Bank Limited </h1>
+                            <h2>Bangalore</h2>
+                            <p>Search For you bank branch</p>
+                        </div>
+                        <div class="ui huge fluid search" id="findBranchSearchField">
+                            <div class="ui icon input">
+                                <input class="prompt" type="text" placeholder="Enter Bank Branch">
+                                <i class="search icon"></i>
+                            </div>
+                            <div class="results"></div>
+                        </div>
+                    </div>
+                    <div class="one wide right column"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="ui vertical raised adStripe segment">
+        <div class="ui mobile hidden centered large rectangle test ad" data-text="Large Rectangle"></div>
+    </div>
+
+    <div class="ui blue hidden inverted vertical stripe segment" id="showResultSegment">
         <div class="ui grid container">
             <div class="row">
                 <div class="one wide left column"></div>
                 <div class="fourteen wide center aligned column">
                     <div class="ui stripe segment">
-                        <h1>ICICI Bank Limited </h1>
-                        <h1></h1>
-                        <p>Search For you bank Location</p>
+                        <h2>ICICI Bank Limited </h2>
+                        <p>Bangalore Branch</p>
+                        <h1>IFSC : ABC000090909</h1>
+                        <h4>Address</h4>
+                        <p>38/10 St Johns Road, Sivan Chetty Garden P.O.</p>
+                        <p>Bangalore - 560042</p>
                     </div>
-                    <div class="ui huge fluid search" id="findLocationSearchField">
-                        <div class="ui icon input">
-                            <input class="prompt" type="text" placeholder="Enter Bank Location ">
-                            <i class="search icon"></i>
-                        </div>
-                        <div class="results"></div>
-                    </div>
+                    <div class="one wide right column"></div>
                 </div>
-                <div class="one wide right column"></div>
-            </div>
-        </div>
-    </div>
-
-
-
-    <!-- Find Branch Segement -->
-
-    <div class="ui white vertical stripe segment" id="findBranchSegment">
-        <div class="ui grid container">
-            <div class="row">
-                <div class="one wide left column"></div>
-                <div class="fourteen wide center aligned column">
-                    <div class="ui stripe segment">
-                        <h1>ICICI Bank Limited </h1>
-                        <h2>Bangalore</h2>
-                        <p>Search For you bank branch</p>
-                    </div>
-                    <div class="ui huge fluid search" id="findBranchSearchField">
-                        <div class="ui icon input">
-                            <input class="prompt" type="text" placeholder="Enter Bank Branch">
-                            <i class="search icon"></i>
-                        </div>
-                        <div class="results"></div>
-                    </div>
-                </div>
-                <div class="one wide right column"></div>
             </div>
         </div>
     </div>
 </div>
-
-<div class="ui vertical raised adStripe segment">
-    <div class="ui mobile hidden centered large rectangle test ad" data-text="Large Rectangle"></div>
-</div>
-
-<div class="ui blue inverted vertical stripe segment" id="showResultSegment">
-    <div class="ui grid container">
-        <div class="row">
-            <div class="one wide left column"></div>
-            <div class="fourteen wide center aligned column">
-                <div class="ui stripe segment">
-                    <h2>ICICI Bank Limited </h2>
-                    <p>Bangalore Branch</p>
-                    <h1>IFSC : ABC000090909</h1>
-                    <h4>Address</h4>
-                    <p>38/10 St Johns Road, Sivan Chetty Garden P.O.</p>
-                    <p>Bangalore - 560042</p>
-                </div>
-                <div class="one wide right column"></div>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
-
-
-        <div id="particles-js"></div>
-
 
 <div class="ui inverted vertical footer segment">
     <div class="ui container">
